# Branchmining-and-farming-simulator

./: .gitignore  CMakeLists.txt
assets/: info.json
assets/block/bafs/: air.json  grass_block.json
cmake/: FindEigen.cmake  FindGLFW.cmake  Findglad.cmake  Findrapidjson.cmake  Findspdlog.cmake
resources/: info.json
resources/block/bafs/: air.json
src/: constants.h  glad.c
src/branchmining/and/farming/simulator/: CommonConstants.java  Registries.java  version.json
src/branchmining/and/farming/simulator/block/: AirBlock.java  Block.java  BlockData.java  BlockInstance.java  Blocks.java
src/branchmining/and/farming/simulator/client/: BaFSClient.java  ClientWorld.java
src/branchmining/and/farming/simulator/client/input/: KeyboardInput.java  MouseInput.java  WindowInput.java
src/branchmining/and/farming/simulator/client/render/: RenderContext.java
src/branchmining/and/farming/simulator/entity/: Entity.java  EntityList.java  EntityType.java  EntityTypes.java
src/branchmining/and/farming/simulator/interaction/: ClientInteractionManager.java  DamageSource.java  InteractionManager.java
src/branchmining/and/farming/simulator/server/: ServerMain.java
src/branchmining/and/farming/simulator/startup/: ClientMain.java  Main.java  RunArgs.java
src/branchmining/and/farming/simulator/world/: World.java  WorldView.java
src/client/: client.cpp  client.h  input.cpp  input.h
src/startup/: arg_parse.cpp  arg_parse.h  main.cpp  main.h  run_args.cpp  run_args.h
src/util/: tick_counter.cpp  tick_counter.h
src/util/registry/: registry.cpp  registry.h
(+47 files in other folders)
